--- a/NOMAD/Base.lproj/Main.storyboard
+++ b/NOMAD/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="V3v-vq-noj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="V3v-vq-noj">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -127,7 +127,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="pwe-sv-Jax">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="162" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="pwe-sv-Jax">
                                 <rect key="frame" x="0.0" y="114" width="320" height="389"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <constraints>
@@ -170,7 +170,7 @@
                                                     <rect key="frame" x="20" y="9" width="32" height="32"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 </imageView>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Delivery from 6-7PM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x1k-UI-bv0">
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Choose Delivery Slot" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x1k-UI-bv0">
                                                     <rect key="frame" x="79" y="14" width="171" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="18"/>
@@ -187,7 +187,7 @@
                                             <outlet property="_deliverySlotLabel" destination="x1k-UI-bv0" id="qWi-dZ-Kbb"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ORDERDETAILSDELIVERYPICKERCELLIDENTIFIER" rowHeight="162" id="wfK-IT-vJ8">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ORDERDETAILSDELIVERYPICKERCELLIDENTIFIER" rowHeight="162" id="wfK-IT-vJ8" customClass="OrderDetailsDeliveryPickerTableViewCell">
                                         <rect key="frame" x="0.0" y="122" width="320" height="162"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wfK-IT-vJ8" id="uuc-sF-C0q">
@@ -204,6 +204,9 @@
                                                 <constraint firstAttribute="centerY" secondItem="p8W-vP-11i" secondAttribute="centerY" id="Ppv-uc-eVR"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="_deliveryPicker" destination="p8W-vP-11i" id="9J8-sA-Utw"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -262,14 +265,9 @@
                                 <rect key="frame" x="93" y="-10" width="134" height="134"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <pickerView hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3rO-tN-rre">
-                                <rect key="frame" x="-80" y="406" width="480" height="162"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="3rO-tN-rre" secondAttribute="bottom" id="3kf-nq-5zh"/>
                             <constraint firstItem="bqO-eg-sqt" firstAttribute="top" secondItem="vg3-kf-A4S" secondAttribute="bottom" id="737-b3-gFP"/>
                             <constraint firstAttribute="trailing" secondItem="vg3-kf-A4S" secondAttribute="trailing" id="8Av-at-rGy"/>
                             <constraint firstItem="mpk-qM-j2l" firstAttribute="centerX" secondItem="lRT-YQ-0lw" secondAttribute="centerX" id="D29-Mz-N19"/>
@@ -281,14 +279,12 @@
                             <constraint firstAttribute="trailing" secondItem="lRT-YQ-0lw" secondAttribute="trailing" id="Sxg-ho-avB"/>
                             <constraint firstItem="lRT-YQ-0lw" firstAttribute="leading" secondItem="PRA-Wb-Pvq" secondAttribute="leading" id="W4t-qg-evT"/>
                             <constraint firstItem="vg3-kf-A4S" firstAttribute="leading" secondItem="PRA-Wb-Pvq" secondAttribute="leading" id="fdP-aW-KEX"/>
-                            <constraint firstAttribute="centerX" secondItem="3rO-tN-rre" secondAttribute="centerX" id="u2F-T4-HfX"/>
                             <constraint firstItem="lRT-YQ-0lw" firstAttribute="top" secondItem="PRA-Wb-Pvq" secondAttribute="top" id="wUJ-tP-2R4"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="s2q-Mk-jCS"/>
                     <connections>
                         <outlet property="_buttonToBottomConstraint" destination="737-b3-gFP" id="sN2-AC-qlW"/>
-                        <outlet property="_deliveryPicker" destination="3rO-tN-rre" id="b9R-Cr-etG"/>
                         <outlet property="_tableView" destination="pwe-sv-Jax" id="q5B-a8-Dfd"/>
                     </connections>
                 </viewController>
